Fix organization header style to fit with screen header on smaller devices

--- a/src/screens/OrganizationScreen/style.css
+++ b/src/screens/OrganizationScreen/style.css
@@ -31,3 +31,9 @@
 .organization-content {
   padding-top: 18px;
 }
+
+@media only screen and (max-width: 320px) {
+  .organization-sub-header {
+    padding-top: 49px;
+  }
+}
